fixes navbar overlapping issue on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -58,6 +58,10 @@ body {
     border: none;
 }
 
+nav {
+    z-index: 1;
+}
+
 .content {
     margin-top: 1rem;
     flex: 1;
